# InfiniteCollections

./: .gitignore  Makefile  README.md  pyproject.toml
src/infinitecollections/: list.py
test/: test_infinitelist.py
